--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,10 +25,17 @@
     "rules": {
       "prettier/prettier": "error",
       "class-methods-use-this": "off",
-      "camelcase": "off",
+      "@typescript-eslint/camelcase": "off",
+      "no-useless-constructor": "off",
       "@typescript-eslint/no-unused-vars": ["error", {
         "argsIgnorePattern": "_"
       }],
+      "@typescript-eslint/interface-name-prefix": [
+        "error",
+        {
+          "prefixWithI": "always"
+        }
+      ],
       "import/extensions": [
         "error",
         "ignorePackages",
