--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,18 @@ jobs:
       uses: actions/setup-node@v1.4.3
       with:
         node-version: 12.x
+        
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+
+    - uses: actions/cache@v2
+      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
     
     - name: Install dependencies
       run: yarn
@@ -22,12 +34,12 @@ jobs:
     - name: Run build
       run: yarn build
     
-    - name: Copy dist to Digital Ocean
+    - name: Copy all code to Digital Ocean
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
         port: ${{ secrets.SSH_PORT }}
         key: ${{ secrets.SSH_KEY }} 
-        source: "."
+        source: ".,!node_modules"
         target: "~/app/gobarber"
