--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ dist
 .env
 ormconfig.json
 
-tmp/*
-!tmp/.gitkeep
+tmp/uploads/*
+!tmp/uploads/.gitkeep
+!tmp/uploads/default-avatar.png
 
 .DS_Store
 coverage
